--- a/requirements.yml
+++ b/requirements.yml
@@ -14,6 +14,9 @@ non-functional:
 implicit:
 - Возможность регистрации пользователя
 - Возможность авторизации пользователя
-- Возможность указать контактные данные пользователя при оформлении заказа
+- Возможность указать контактные данные пользователя при оформлении заказа (номер телефона, адрес, электронная почта)
+- Пользователь должен иметь возможность выбрать способ оплаты заказа
+- Пользователь должен иметь возможность выбрать способ доставки заказа
+- После оформления заказа пользователь должен получить письмо на электронную почту с информацией о своем заказе
 - На странице корзины пользователь может указать количество единиц добавленного в корзину товара
 - Сайт должен иметь возможность изменения валюты
