--- a/requirements.yml
+++ b/requirements.yml
@@ -20,3 +20,6 @@ implicit:
   - После оформления заказа пользователь должен получить письмо на электронную почту с информацией о своем заказе
   - На странице корзины пользователь может указать количество единиц добавленного в корзину товара
   - Сайт должен иметь возможность изменения валюты
+  - На странице магазина должно быть указано количество страниц в каталоге
+  - Фильтр по цене должен обрабатывать числа с дробной частью
+  
