--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,165 +1,242 @@
 ---
-- summary: |
+1.1- summary: |
     Проверка поиска товара по корректному ключевому слову 
   requirement: |
-    Поле поиска выполняет успешный поиск товаров по вводу корректного ключевого слова
+    Поле поиска выполняет успешный поиск товаров после ввода корректного ключевого слова
   prerequisites: |
-     
   test-data: | 
   steps:
+    - Открыть раздел "Магазин"
     - В поле поиска ввести ключевое слово "Iphone"
   expected-result: |
     На странице отображается реливантный результат поиска по ключевому слову
 
-- summary: |
+1.2- summary: |
     Поиск товара по некорректному ключевому слову 
   requirement: |
     При вводе некорректного ключевого слова в поле поиска, на странице отображается сообщение "Ничего не найдено!" 
   prerequisites: |
-    
   test-data: | 
   steps:
+    - Открыть страницу магазина
     - В поле поиска ввести некорректное ключевое слово "Яблоко"
   expected-result: |
     В результате поиска отображается сообщение "Ничего не найдено!"
    
-- summary: |
+1.3- summary: |
     Проверка поиска товара по категории 
   requirement: |
-    При выборе категории во вкладке "Категория" отображаются товары по заданной категории
+    При выборе категории на странице отображаются товары по заданной категории
   prerequisites: |
-    
   test-data: |
   steps:
-    - Открыть вкладку "Категория"
-    - Выбрать "smartphones"   
+    - На странице магазина открыть вкладку "Категория"
+    - Выбрать значение "smartphones"   
+  expected-result: |
+    Результат поиска отображает товары по заданной категории
+
+1.4- summary: |
+    Проверка поиска товара по категории 
+  requirement: |
+    При выборе категории на странице отображаются товары по заданной категории
+  prerequisites: |
+  test-data: |
+  steps:
+    - На странице магазина открыть вкладку "Категория"
+    - Выбрать значение "laptops"   
+  expected-result: |
+    Результат поиска отображает товары по заданной категории
+
+1.5- summary: |
+    Проверка поиска товара по категории 
+  requirement: |
+    При выборе категории на странице отображаются товары по заданной категории
+  prerequisites: |
+  test-data: |
+  steps:
+    - На странице магазина открыть вкладку "Категория"
+    - Выбрать значение "fragrances"   
+  expected-result: |
+    Результат поиска отображает товары по заданной категории
+
+1.6- summary: |
+    Проверка поиска товара по категории 
+  requirement: |
+    При выборе категории на странице отображаются товары по заданной категории
+  prerequisites: |
+  test-data: |
+  steps:
+    - На странице магазина открыть вкладку "Категория"
+    - Выбрать значение "skincare"   
+  expected-result: |
+    Результат поиска отображает товары по заданной категории
+
+1.7- summary: |
+    Проверка поиска товара по категории 
+  requirement: |
+    При выборе категории на странице отображаются товары по заданной категории
+  prerequisites: |
+  test-data: |
+  steps:
+    - На странице магазина открыть вкладку "Категория"
+    - Выбрать значение "groceries"   
+  expected-result: |
+    Результат поиска отображает товары по заданной категории
+
+1.8- summary: |
+    Проверка поиска товара по категории 
+  requirement: |
+    При выборе категории на странице отображаются товары по заданной категории
+  prerequisites: |
+  test-data: |
+  steps:
+    - На странице магазина открыть вкладку "Категория"
+    - Выбрать значение "home-decoration"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
 ФИЛЬТРАЦИЯ 
-- summary: |
+2.1- summary: |
     Проверка фильтрации товаров по производителю
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При выборе чекбокса производителя на странице отображаются все товары данного производителя
   prerequisites: |
-    
   test-data: |
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
   expected-result: |
-    На странице интернет-магазина отображаются товары выбранные в фильтре производителя
+    На странице отображаются товары выбранные в фильтре производителя
 
-- summary: |
-    Успешная фильтрация товаров по множеству производителей
+2.2- summary: |
+    Проверка фильтрации товаров по отсутствию фильтра производителя
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+     При отсутствии отметки чекбокса по производителю на странице отображаются все товары из каталога
   prerequisites: |
-    
+     Стоит отметка чекбокса "Apple" в фильтре по производителю
+  test-data: |
+  steps:
+    - Убрать отметку чекбокса "Apple" в фильтре по производителю 
+  expected-result: |
+    На странице отображаются все товары из каталога
+
+2.3- summary: |
+    Проверка фильтрации товаров по множеству производителей
+  requirement: |
+     При выборе множества чекбоксов производителей на странице отображаются все товары данных производителей  
+  prerequisites: |
   test-data: |
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
     - В разделе "Производитель" выбрать чекбокс "Lord - Al-Rehab"
     - В разделе "Производитель" выбрать чекбокс "Saaf & Khaas"
   expected-result: |
-    На странице интернет-магазина отображаются все товары выбранные в фильтре производителя
+    На странице отображаются все товары выбранные в фильтре производителя
 
-- summary: |
+2.4- summary: |
     Проверка фильтрация товаров по цене
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При вводе в фильтр отрицательного значения цены страница должна отобразить сообщение "Ничего не найдено!"
   prerequisites: |
-    
   test-data: |
+    Допустимое значение цены: 0 - 11190
   steps:
     - В разделе "Цена" в значении "от" указать "-1"
     - В разделе "Цена" в значении "до" указать "0"
   expected-result: |
-    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+    На странице отображается сообщение "Ничего не найдено!"
 
-- summary: |
+2.5- summary: |
     Проверка фильтрации товаров по цене 
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При вводе в фильтр нулевого значения цены страница должна отобразить сообщение "Ничего не найдено!"
   prerequisites: |
-    
   test-data: |
-    Значение цены "от" - 0, значение цены "до" - 11190
+    Допустимое значение цены: 0 - 11190
   steps:
     - В разделе "Цена" в значении "от" указать "0"
     - В разделе "Цена" в значении "до" указать "0"
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
-- summary: |
+2.6- summary: |
     Проверка фильтрация товаров по цене
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
-    
   test-data: |
-    Значение цены "от" - 0, значение цены "до" - 11190  
+    Допустимое значение цены: 0 - 11190
   steps:
     - В разделе "Цена" в значении "от" указать "0"
     - В разделе "Цена" в значении "до" указать "5000"
   expected-result: |
     На странице интернет-магазина отображается товары с учетом фильтра
 
-- summary: |
-    Проверка фильтрация товаров по цене
+2.7- summary: |
+    Проверка фильтрация товаров по цене 
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
-   
   test-data: |
-    Значение цены "от" - 0, значение цены "до" - 11190
+    Допустимое значение цены: 0 - 11190
   steps:
     - В разделе "Цена" в значении "от" указать "0"
     - В разделе "Цена" в значении "до" указать "11190"
   expected-result: |
     На странице интернет-магазина отображается товары с учетом фильтра
 
+2.8- summary: |
+    Проверка фильтрация товаров по цене
+  requirement: |
+     При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
+  prerequisites: |
+  test-data: |
+     Допустимое значение цены: 0 - 11190
+  steps:
+    - В разделе "Цена" в значении "от" указать "11190"
+    - В разделе "Цена" в значении "до" указать "11191"
+  expected-result: |
+    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+
 - summary: |
     Проверка фильтрация товаров по цене
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+     При пустых значениях фильтра цены отображаются все товары каталога
   prerequisites: |
-    
   test-data: |
-   Значение цены "от" - 0, значение цены "до" - 11190
   steps:
     - В разделе "Цена" в значении "от" указать "11190"
     - В разделе "Цена" в значении "до" указать "11191"
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
     
-- summary: |
+2.9- summary: |
     Проверка фильтрация товаров по наличию
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При выборе чекбокса "В наличии" отображаются все товары в наличии 
   prerequisites: |
-    
+     Чекбокс "В наличии" не отмечен галочкой
   test-data: |
   steps:
     - В разделе фильтрации выбрать чекбокс "В наличии"
   expected-result: |
     На странице интернет-магазина отображаются товары в наличии 
 
-- summary: |
+2.10- summary: |
     Проверка фильтрация товаров по наличию
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При отсутствии отметки в чекбоксе "В наличии" отображаются товары которых нет в наличии
   prerequisites: |
     Чекбокс "В наличии" отмечен галочкой по умолчанию
   test-data: |
   steps:
-    - В разделе фильтрации товаров убрать галочку из чекбокса "В наличии"
+    - В разделе фильтрации убрать галочку из чекбокса "В наличии"
   expected-result: |
-    На странице интернет-магазина отображается сообщение 
+    На странице интернет-магазина отображаются товары которых нет в наличии
 
-???? - summary: |
+2.11???? - summary: |
     Проверка фильтрация товаров по производителю, цене и наличию
   requirement: |
-    Пользователь должен иметь возможность фильтровать товары
+    При выборе 
   prerequisites: |
     
   test-data: |
@@ -167,11 +244,12 @@
     - В разделе фильтрации товаров убрать галочку из чекбокса "В наличии"
   expected-result: |
     На странице интернет-магазина отображается сообщение    
+
 МОБВЕРС
-- summary: |
+3- summary: |
     Проверка наличия мобильной версии сайта
   requirement: |
-    Сайт должен открываться при использовании на мобильном устройстве 
+    Сайт должен открываться на мобильном устройстве 
   prerequisites: |
   test-data: |
   steps:
@@ -181,102 +259,155 @@
   expected-result: |
     Сайт открывается в мобильной версии
 
-- summary: |
-    Проверка просмотра товаров 
+4.1- summary: |
+    Проверка просмотра товаров на странице каталога
   requirement: |
-    На сайте отображается постраничный вывод товаров
+    На сайте должен отображается постраничный вывод товаров
   prerequisites: |  
+      Открыт раздел "Магазин"
   test-data: |
   steps:
-    - В разделе "Магазин" проверить отображение товаров 
+    - Проверить отображение товаров в разделе "Магазин" 
+    - Проскролить сайт вниз
     - Перейти на следующую страницу каталога нажав кнопку "Следующая"
     - Проверить отображение товаров
   expected-result: |
     Сайт отображает постраничный вывод товаров
     
-- summary: |
-    Проверка просмотра подробной информации товара
+4.2???- summary: |
+    Проверка просмотра подробной информации товара на странице товара
   requirement: |
-    На странице товара выводится подробная информация о товаре
+    На странице товара должна выводится подробная информация о товаре: название, рейтинг, цена со скидкой, цена без скидки
   prerequisites: |
     Открыт раздел "Магазин"
     test-data: |
   steps:
     - Открыть товар "iPhone 9"
-    - Проверить наличие подробной информации о товаре (название, рейтинг, цена со скидкой, цена без скидки)
+    - Проверить наличие названия на странице
+    - Проверить наличие рейтинга на странице
+    - Проверить наличие цены со скидкой на странице
+    - Проверить наличие цены без скидки на странице
   expected-result: |
-    На странице товара выводится подробная информация о товаре (название, рейтинг, цена со скидкой, цена без скидки)
+    На странице товара выводится подробная информация о товаре: название, рейтинг, цена со скидкой, цена без скидки
 
-- summary: |
-    Проверка добавления товаров в корзину
+4.3? - summary: |
+    Проверка просмотра подробной информации товара в каталоге
   requirement: |
-    При добавлении товара в корзину, товар отображается в разделе "Корзина"
+    В каталоге товаров должна выводиться подробная информация о каждом товаре: название, рейтинг, цена со скидкой, цена без скидки
   prerequisites: |
     Открыт раздел "Магазин"
-  test-data: |
-  steps:
-    - В разделе "Магазин" открыть товар  "iPhone 9"
-    - На странице товара нажать "В корзину"
-    - Открыть "Корзину" и проверить наличие добавленного товара
-  expected-result: |
-    Товар отображается в разделе "Корзина"
-
-- summary: |
-    Проверка добавления товаров в корзину
-  requirement: |
-    Товары должны отображаться в корзине после добавления
-  prerequisites: |
-    Открыт раздел "Магазин"
-  test-data: |
-  steps:
-    - Добавить товар "iPhone 9" в корзину нажав "В корзину"
-    - Добавить товар "iPhone X" в корзину нажав "В корзину" 
-    - Открыть "Корзина" и проверить наличие добавленных товаров
-  expected-result: |
-    Товары отображаются в разделе "Корзина"
-
-- summary: |
-    Проверка добавления товаров в корзину
-  requirement: |
-    После добавления товаров в корзину, товары отображаются в разделе "Корзина"
-  prerequisites: |
-    Открыт раздел "Магазин"
-  test-data: |
-  steps:
-    - Добавить товар "iPhone 9" в корзину нажав "В корзину"
-    - Открыть "Корзину" и проверить наличие добавленного товара
-    - Вернуться в раздел "Магазин" нажав "Продолжить покупки"
-    - Добавить товар "iPhone X" в корзину нажав "В корзину" 
-    - Открыть "Корзину" и проверить наличие добавленных товаров
-  expected-result: |
-    Товары отображаются в разделе "Корзина"
-
-- summary: |
-    Проверка добавления товаров в корзину
-  requirement: |
-    После добавления товаров в корзину, товары отображаются в разделе "Корзина"
-  prerequisites: |
-    Открыт раздел "Магазин"
-  test-data: |
-  steps:
-    - Добавить товар "iPhone 9" в корзину нажав "В корзину"
-    - Открыть "Корзину" и проверить наличие добавленного товара
-    - Вернуться в раздел "Магазин" нажав "Продолжить покупки"
-    - Добавить товар "iPhone X" в корзину нажав "В корзину" 
-    - Открыть "Корзина" и проверить наличие добавленных товаров
-  expected-result: |
-    Товары отображаются в разделе "Корзина"
-
-- summary: |
-    Проверка удаления товара в корзине
-  requirement: |
-    После нажатия "Удалить", товар удаляется из корзины
-  prerequisites: |
-    В корзину добавлен товар "iPhone 9"
     test-data: |
   steps:
-    - Открыть товар  "iPhone 9"
-    - На странице товара нажать "В корзину"
-    - Открыть "Корзину" и проверить наличие добавленного товара
+    - Проверить наличие названия у товаров 
+    - Проверить наличие рейтинга у товаров
+    - Проверить наличие цены со скидкой у товаров
+    - Проверить наличие цены без скидки у товаров
   expected-result: |
-    Товар отображается в разделе "Корзина"
+    В каталоге выводится подробная информация о каждом товаре: название, рейтинг, цена со скидкой, цена без скидки
+
+5.1- summary: |
+    Проверка добавления товаров в корзину через страницу товара
+  requirement: |
+    При добавлении товаров в корзину через страницу товара они отображаются в разделе "Корзина"
+  prerequisites: |
+    Открыт раздел "Магазин"
+  test-data: |
+  steps:
+    - Открыть страницу товара  "iPhone 9"
+    - Добавить товар в корзину нажав "В корзину"
+    - Открыть корзину и проверить наличие добавленного товара
+    - Вернуться в раздел "Магазин" нажав "Продолжить покупки"
+    - Открыть страницу товара  "iPhone Х"
+    - Добавить товар в корзину нажав "В корзину"
+    - Открыть корзину и проверить наличие добавленного товара
+  expected-result: |
+    Товары отображаются в разделе "Корзина"
+
+5.2- summary: |
+    Проверка добавления товаров в корзину через каталог
+  requirement: |
+    После добавления товаров из раздела "Магазин" в корзину товары отображаются в разделе "Корзина"
+  prerequisites: |
+    Открыт раздел "Магазин"
+  test-data: |
+  steps:
+    - Добавить товар "iPhone 9" в корзину нажав "В корзину"
+    - Открыть корзину и проверить наличие добавленного товара
+    - Вернуться в раздел "Магазин" нажав "Продолжить покупки"
+    - Добавить товар "iPhone X" в корзину нажав "В корзину" 
+    - Открыть корзину и проверить наличие добавленных товаров
+  expected-result: |
+    Добавленные товары отображаются в разделе "Корзина"
+
+5.3- summary: |
+    Проверка удаления товара из корзины 
+  requirement: |
+    После удаления товара из корзины товары не отображаются в разделе "Корзина"
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленными товарами "Iphone" и "Iphone X"
+  test-data: |
+  steps:
+    - Удалить товар "Iphone" из корзины нажав "Удалить"
+  expected-result: |
+    Товар не отображается в разделе "Корзина".
+
+5.4- summary: |
+    Проверка очистки корзины 
+  requirement: |
+    После нажатия "Очистить корзину" в разделе "Корзина" все добавленые товары удаляются и не отображаются
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленными товарами "Iphone" и "Iphone X"
+  test-data: |
+  steps:
+    - Очистить корзину нажав "Очистить корзину"
+  expected-result: |
+    Корзина пуста. Добавленные товары удалены и не отображаются
+
+5.5- summary: |
+    Проверка возможности продолжить совершать покупки на странице корзины 
+  requirement: |
+    После нажатия "Продолжить покупки" в разделе "Корзина" сайт должен открыть страницу с каталогом товаров 
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленным товаром "Iphone"
+  test-data: |
+  steps:
+    - Перейти в каталог нажав "Продолжить покупки"
+  expected-result: |
+    Сайт открывает страницу каталога с товарами 
+
+5.6- summary: |
+    Проверка оформления заказа с переходом на страницу оплаты
+  requirement: |
+    После нажатия "Оформить заказ" в разделе "Корзина" совершается переход на страницу оплаты
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленными товаром "Iphone"
+  test-data: |
+  steps:
+    - Оформить заказ нажав "Оформить заказ"
+  expected-result: |
+    На сайте открывается страница оплаты 
+
+5.7- summary: |
+    Проверка отправки запроса на сервер с ответом при оформлении заказа
+  requirement: |
+    После нажатия "Оформить заказ" в разделе "Корзина" отправляется запрос на сервер с его ответом 200 OK
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленны товаром "Iphone"
+  test-data: |
+  steps:
+    - Оформить заказ нажав "Оформить заказ"
+    - Проверить отправку запроса c ответом сервера через DevTools
+  expected-result: |
+    Запрос на сервер с ответом - 200 OK. Заказ оформлен.
+
+6- summary: |
+    Проверка корзины в сессии браузера 
+  requirement: |
+    Корзина хранится в сессии браузера
+  prerequisites: |
+  test-data: |
+  steps:
+    -
+  expected-result: |
+    
+
