--- a/test-cases.yml
+++ b/test-cases.yml
@@ -187,7 +187,7 @@
 2.8- summary: |
     Проверка фильтрация товаров по цене
   requirement: |
-     При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
+    При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
   prerequisites: |
   test-data: |
      Допустимое значение цены: 0 - 11190
@@ -200,7 +200,32 @@
 - summary: |
     Проверка фильтрация товаров по цене
   requirement: |
-     При пустых значениях фильтра цены отображаются все товары каталога
+    При пустых значениях фильтра цены отображаются все товары каталога
+  prerequisites: |
+  test-data: |
+  steps:
+    - В разделе "Цена" в значении "от" указать "11190"
+    - В разделе "Цена" в значении "до" указать "11191"
+  expected-result: |
+    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+
+- summary: |
+    Проверка фильтрация товаров по цене со скидкой
+  requirement: |
+    При введении цены с учетом скидки в фильтр цены на странице отображается товар соответствующий цене товар
+    prerequisites: |
+  test-data: |
+    Значение цены товара для ввода в фильтр 477.85$
+  steps:
+    - В разделе "Цена" в значении "от" указать "0"
+    - В разделе "Цена" в значении "до" указать "477.85"
+  expected-result: |
+    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+
+- summary: |
+    Проверка фильтрация товаров по цене без скидки
+  requirement: |
+    При пустых значениях фильтра цены отображаются все товары каталога
   prerequisites: |
   test-data: |
   steps:
@@ -238,7 +263,6 @@
   requirement: |
     При выборе 
   prerequisites: |
-    
   test-data: |
   steps:
     - В разделе фильтрации товаров убрать галочку из чекбокса "В наличии"
@@ -262,7 +286,7 @@
 4.1- summary: |
     Проверка просмотра товаров на странице каталога
   requirement: |
-    На сайте должен отображается постраничный вывод товаров
+    На сайте должен отображаться постраничный вывод товаров 
   prerequisites: |  
       Открыт раздел "Магазин"
   test-data: |
@@ -272,7 +296,7 @@
     - Перейти на следующую страницу каталога нажав кнопку "Следующая"
     - Проверить отображение товаров
   expected-result: |
-    Сайт отображает постраничный вывод товаров
+    Сайт отображает постраничный вывод товаров 
     
 4.2???- summary: |
     Проверка просмотра подробной информации товара на странице товара
@@ -398,7 +422,7 @@
     - Оформить заказ нажав "Оформить заказ"
     - Проверить отправку запроса c ответом сервера через DevTools
   expected-result: |
-    Запрос на сервер с ответом - 200 OK. Заказ оформлен.
+    Отправляется запрос на сервер с ответом - 200 OK. Заказ оформлен.
 
 6- summary: |
     Проверка корзины в сессии браузера 
@@ -407,7 +431,9 @@
   prerequisites: |
   test-data: |
   steps:
-    -
+    - Зайти на страницу магазина
+    - Открыть инструменты разработчика
+    - Проверить наличие сессии в Session storage
   expected-result: |
-    
+    Сохраняется корзина в сессии браузера
 
