--- a/test-cases.yml
+++ b/test-cases.yml
@@ -159,7 +159,7 @@
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
 2.6- summary: |
-    Проверка фильтрация товаров по цене
+    Проверка фильтрации товаров по цене
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
@@ -172,7 +172,7 @@
     На странице интернет-магазина отображается товары с учетом фильтра
 
 2.7- summary: |
-    Проверка фильтрация товаров по цене 
+    Проверка фильтрации товаров по цене 
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
@@ -185,7 +185,7 @@
     На странице интернет-магазина отображается товары с учетом фильтра
 
 2.8- summary: |
-    Проверка фильтрация товаров по цене
+    Проверка фильтрации товаров по цене
   requirement: |
     При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
   prerequisites: |
@@ -197,8 +197,8 @@
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
-- summary: |
-    Проверка фильтрация товаров по цене
+!- summary: |
+    Проверка фильтрации товаров по цене
   requirement: |
     При пустых значениях фильтра цены отображаются все товары каталога
   prerequisites: |
@@ -208,6 +208,19 @@
     - В разделе "Цена" в значении "до" указать "11191"
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+
+- summary: |
+    Проверка фильтрации товаров по цене со скидкой
+  requirement: |
+    При введении цены с учетом скидки в фильтр цены на странице отображается товар соответствующий цене товар
+    prerequisites: |
+  test-data: |
+    Значение цены конкретного товара для ввода в фильтр 477.85$
+  steps:
+    - В разделе "Цена" в значении "от" указать "0"
+    - В разделе "Цена" в значении "до" указать "477.85"
+  expected-result: |
+    На странице отображаются товары в соответсующем по цене диапазоне
 
 - summary: |
     Проверка фильтрация товаров по цене со скидкой
@@ -215,22 +228,36 @@
     При введении цены с учетом скидки в фильтр цены на странице отображается товар соответствующий цене товар
     prerequisites: |
   test-data: |
-    Значение цены товара для ввода в фильтр 477.85$
+    Значение цены конкретного товара для ввода в фильтр 477.85$
   steps:
-    - В разделе "Цена" в значении "от" указать "0"
+    - В разделе "Цена" в значении "от" указать "477.85"
     - В разделе "Цена" в значении "до" указать "477.85"
   expected-result: |
-    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+    На странице отображается товар соответствующий цене со скидкой
+
+- summary: |
+    Проверка фильтрации товаров по цене без скидки
+  requirement: |
+    При введении цены без учета скидки в фильтр цены на странице отображаются товары соответствующего диапазона
+    prerequisites: |
+  test-data: |
+    Значение цены конкретного товара для ввода в фильтр 549$
+  steps:
+    - В разделе "Цена" в значении "от" указать "0"
+    - В разделе "Цена" в значении "до" указать "549"
+  expected-result: |
+    На странице отображаются товары в соответсующем по цене диапазоне
 
 - summary: |
     Проверка фильтрация товаров по цене без скидки
   requirement: |
-    При пустых значениях фильтра цены отображаются все товары каталога
+    При введении в фильтр цены без учета скидки на странице отображается товар соответствующий цене товара
   prerequisites: |
   test-data: |
+    Значение цены конкретного товара для ввода в фильтр 549$ 
   steps:
-    - В разделе "Цена" в значении "от" указать "11190"
-    - В разделе "Цена" в значении "до" указать "11191"
+    - В разделе "Цена" в значении "от" указать "549"
+    - В разделе "Цена" в значении "до" указать "549"
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
     
