--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,5 +1,5 @@
 ---
-1.1- summary: |
+- summary: |
     Проверка поиска товара по корректному ключевому слову 
   requirement: |
     Поле поиска выполняет успешный поиск товаров после ввода корректного ключевого слова
@@ -11,7 +11,7 @@
   expected-result: |
     На странице отображается реливантный результат поиска по ключевому слову
 
-1.2- summary: |
+- summary: |
     Поиск товара по некорректному ключевому слову 
   requirement: |
     При вводе некорректного ключевого слова в поле поиска, на странице отображается сообщение "Ничего не найдено!" 
@@ -23,7 +23,7 @@
   expected-result: |
     В результате поиска отображается сообщение "Ничего не найдено!"
    
-1.3- summary: |
+- summary: |
     Проверка поиска товара по категории 
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
@@ -35,7 +35,7 @@
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
-1.4- summary: |
+- summary: |
     Проверка поиска товара по категории 
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
@@ -47,7 +47,7 @@
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
-1.5- summary: |
+- summary: |
     Проверка поиска товара по категории 
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
@@ -59,7 +59,7 @@
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
-1.6- summary: |
+- summary: |
     Проверка поиска товара по категории 
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
@@ -71,7 +71,7 @@
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
-1.7- summary: |
+- summary: |
     Проверка поиска товара по категории 
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
@@ -83,7 +83,7 @@
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
-1.8- summary: |
+- summary: |
     Проверка поиска товара по категории 
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
@@ -95,8 +95,7 @@
   expected-result: |
     Результат поиска отображает товары по заданной категории
 
-ФИЛЬТРАЦИЯ 
-2.1- summary: |
+- summary: |
     Проверка фильтрации товаров по производителю
   requirement: |
     При выборе чекбокса производителя на странице отображаются все товары данного производителя
@@ -107,22 +106,22 @@
   expected-result: |
     На странице отображаются товары выбранные в фильтре производителя
 
-2.2- summary: |
+- summary: |
     Проверка фильтрации товаров по отсутствию фильтра производителя
   requirement: |
-     При отсутствии отметки чекбокса по производителю на странице отображаются все товары из каталога
+    При отсутствии отметки чекбокса по производителю на странице отображаются все товары из каталога
   prerequisites: |
-     Стоит отметка чекбокса "Apple" в фильтре по производителю
+    Стоит отметка чекбокса "Apple" в фильтре по производителю
   test-data: |
   steps:
     - Убрать отметку чекбокса "Apple" в фильтре по производителю 
   expected-result: |
     На странице отображаются все товары из каталога
 
-2.3- summary: |
+- summary: |
     Проверка фильтрации товаров по множеству производителей
   requirement: |
-     При выборе множества чекбоксов производителей на странице отображаются все товары данных производителей  
+    При выборе множества чекбоксов производителей на странице отображаются все товары данных производителей  
   prerequisites: |
   test-data: |
   steps:
@@ -132,7 +131,7 @@
   expected-result: |
     На странице отображаются все товары выбранные в фильтре производителя
 
-2.4- summary: |
+- summary: |
     Проверка фильтрация товаров по цене
   requirement: |
     При вводе в фильтр отрицательного значения цены страница должна отобразить сообщение "Ничего не найдено!"
@@ -145,7 +144,7 @@
   expected-result: |
     На странице отображается сообщение "Ничего не найдено!"
 
-2.5- summary: |
+- summary: |
     Проверка фильтрации товаров по цене 
   requirement: |
     При вводе в фильтр нулевого значения цены страница должна отобразить сообщение "Ничего не найдено!"
@@ -158,7 +157,7 @@
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
-2.6- summary: |
+- summary: |
     Проверка фильтрации товаров по цене
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
@@ -171,7 +170,7 @@
   expected-result: |
     На странице интернет-магазина отображается товары с учетом фильтра
 
-2.7- summary: |
+- summary: |
     Проверка фильтрации товаров по цене 
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
@@ -184,7 +183,7 @@
   expected-result: |
     На странице интернет-магазина отображается товары с учетом фильтра
 
-2.8- summary: |
+- summary: |
     Проверка фильтрации товаров по цене
   requirement: |
     При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
@@ -261,19 +260,19 @@
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
     
-2.9- summary: |
+- summary: |
     Проверка фильтрация товаров по наличию
   requirement: |
     При выборе чекбокса "В наличии" отображаются все товары в наличии 
   prerequisites: |
-     Чекбокс "В наличии" не отмечен галочкой
+    Чекбокс "В наличии" не отмечен галочкой
   test-data: |
   steps:
     - В разделе фильтрации выбрать чекбокс "В наличии"
   expected-result: |
     На странице интернет-магазина отображаются товары в наличии 
 
-2.10- summary: |
+- summary: |
     Проверка фильтрация товаров по наличию
   requirement: |
     При отсутствии отметки в чекбоксе "В наличии" отображаются товары которых нет в наличии
@@ -285,19 +284,20 @@
   expected-result: |
     На странице интернет-магазина отображаются товары которых нет в наличии
 
-2.11???? - summary: |
+- summary: |
     Проверка фильтрация товаров по производителю, цене и наличию
   requirement: |
-    При выборе 
+    При выборе в фильтре производителя, указании цены и наличия товара сайт должен отобразить реливантный результат фильтрации
   prerequisites: |
   test-data: |
   steps:
-    - В разделе фильтрации товаров убрать галочку из чекбокса "В наличии"
+    - В фильтре произволителя выбрать "Apple"
+    - В фильтре цены выбрать значение от 0 - 1000
+    - В разделе фильтрации товаров отметить чекбокс "В наличии"
   expected-result: |
-    На странице интернет-магазина отображается сообщение    
+    На странице интернет-магазина успешно отображаются товары с учетом фильтрации    
 
-МОБВЕРС
-3- summary: |
+- summary: |
     Проверка наличия мобильной версии сайта
   requirement: |
     Сайт должен открываться на мобильном устройстве 
@@ -310,12 +310,12 @@
   expected-result: |
     Сайт открывается в мобильной версии
 
-4.1- summary: |
+- summary: |
     Проверка просмотра товаров на странице каталога
   requirement: |
     На сайте должен отображаться постраничный вывод товаров 
   prerequisites: |  
-      Открыт раздел "Магазин"
+    Открыт раздел "Магазин"
   test-data: |
   steps:
     - Проверить отображение товаров в разделе "Магазин" 
@@ -356,7 +356,7 @@
   expected-result: |
     В каталоге выводится подробная информация о каждом товаре: название, рейтинг, цена со скидкой, цена без скидки
 
-5.1- summary: |
+- summary: |
     Проверка добавления товаров в корзину через страницу товара
   requirement: |
     При добавлении товаров в корзину через страницу товара они отображаются в разделе "Корзина"
@@ -374,7 +374,7 @@
   expected-result: |
     Товары отображаются в разделе "Корзина"
 
-5.2- summary: |
+- summary: |
     Проверка добавления товаров в корзину через каталог
   requirement: |
     После добавления товаров из раздела "Магазин" в корзину товары отображаются в разделе "Корзина"
@@ -390,7 +390,7 @@
   expected-result: |
     Добавленные товары отображаются в разделе "Корзина"
 
-5.3- summary: |
+- summary: |
     Проверка удаления товара из корзины 
   requirement: |
     После удаления товара из корзины товары не отображаются в разделе "Корзина"
@@ -402,7 +402,7 @@
   expected-result: |
     Товар не отображается в разделе "Корзина".
 
-5.4- summary: |
+- summary: |
     Проверка очистки корзины 
   requirement: |
     После нажатия "Очистить корзину" в разделе "Корзина" все добавленые товары удаляются и не отображаются
@@ -414,7 +414,7 @@
   expected-result: |
     Корзина пуста. Добавленные товары удалены и не отображаются
 
-5.5- summary: |
+- summary: |
     Проверка возможности продолжить совершать покупки на странице корзины 
   requirement: |
     После нажатия "Продолжить покупки" в разделе "Корзина" сайт должен открыть страницу с каталогом товаров 
@@ -426,7 +426,7 @@
   expected-result: |
     Сайт открывает страницу каталога с товарами 
 
-5.6- summary: |
+- summary: |
     Проверка оформления заказа с переходом на страницу оплаты
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" совершается переход на страницу оплаты
@@ -438,7 +438,7 @@
   expected-result: |
     На сайте открывается страница оплаты 
 
-5.7- summary: |
+- summary: |
     Проверка отправки запроса на сервер с ответом при оформлении заказа
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" отправляется запрос на сервер с его ответом 200 OK
@@ -451,7 +451,7 @@
   expected-result: |
     Отправляется запрос на сервер с ответом - 200 OK. Заказ оформлен.
 
-6- summary: |
+- summary: |
     Проверка корзины в сессии браузера 
   requirement: |
     Корзина хранится в сессии браузера
@@ -463,4 +463,3 @@
     - Проверить наличие сессии в Session storage
   expected-result: |
     Сохраняется корзина в сессии браузера
-
