--- a/test-cases.yml
+++ b/test-cases.yml
@@ -14,12 +14,12 @@
 - summary: |
     Поиск товара по некорректному ключевому слову 
   requirement: |
-    При вводе некорректного ключевого слова в поле поиска, на странице отображается сообщение "Ничего не найдено!" 
+    При вводе некорректного ключевого слова в поле поиска на странице отображается сообщение "Ничего не найдено!" 
   prerequisites: |
   test-data: | 
   steps:
-    - Открыть страницу магазина
-    - В поле поиска ввести некорректное ключевое слово "Яблоко"
+    - Открыть раздел "Магазин"
+    - В поле поиска ввести некорректное ключевое слово "123"
   expected-result: |
     В результате поиска отображается сообщение "Ничего не найдено!"
    
@@ -38,7 +38,7 @@
 - summary: |
     Проверка поиска товара по категории 
   requirement: |
-    При выборе категории на странице отображаются товары по заданной категории
+    При выборе категории "laptops" на странице отображаются товары по заданной категории
   prerequisites: |
   test-data: |
   steps:
@@ -50,7 +50,7 @@
 - summary: |
     Проверка поиска товара по категории 
   requirement: |
-    При выборе категории на странице отображаются товары по заданной категории
+    При выборе категории "fragrances" на странице отображаются товары по заданной категории
   prerequisites: |
   test-data: |
   steps:
@@ -62,7 +62,7 @@
 - summary: |
     Проверка поиска товара по категории 
   requirement: |
-    При выборе категории на странице отображаются товары по заданной категории
+    При выборе категории "skincare" на странице отображаются товары по заданной категории
   prerequisites: |
   test-data: |
   steps:
@@ -74,7 +74,7 @@
 - summary: |
     Проверка поиска товара по категории 
   requirement: |
-    При выборе категории на странице отображаются товары по заданной категории
+    При выборе категории "groceries" на странице отображаются товары по заданной категории
   prerequisites: |
   test-data: |
   steps:
@@ -86,7 +86,7 @@
 - summary: |
     Проверка поиска товара по категории 
   requirement: |
-    При выборе категории на странице отображаются товары по заданной категории
+    При выборе категории "home-decoration" на странице отображаются товары по заданной категории
   prerequisites: |
   test-data: |
   steps:
@@ -109,14 +109,14 @@
 - summary: |
     Проверка фильтрации товаров по отсутствию фильтра производителя
   requirement: |
-    При отсутствии отметки чекбокса по производителю на странице отображаются все товары из каталога
+    При отсутствии отметки чекбокса по производителю на странице отображаются товары из каталога
   prerequisites: |
     Стоит отметка чекбокса "Apple" в фильтре по производителю
   test-data: |
   steps:
     - Убрать отметку чекбокса "Apple" в фильтре по производителю 
   expected-result: |
-    На странице отображаются все товары из каталога
+    На странице отображаются товары из каталога
 
 - summary: |
     Проверка фильтрации товаров по множеству производителей
@@ -160,7 +160,7 @@
 - summary: |
     Проверка фильтрации товаров по цене
   requirement: |
-    При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
+    При вводе в фильтр цен в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
   test-data: |
     Допустимое значение цены: 0 - 11190
@@ -196,22 +196,23 @@
   expected-result: |
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
-!- summary: |
+- summary: |
     Проверка фильтрации товаров по цене
   requirement: |
     При пустых значениях фильтра цены отображаются все товары каталога
   prerequisites: |
   test-data: |
+    В фильтре цены стоят хначения от 1-1000
   steps:
-    - В разделе "Цена" в значении "от" указать "11190"
-    - В разделе "Цена" в значении "до" указать "11191"
+    - В разделе "Цена" удалить значение "от"
+    - В разделе "Цена" удалить значение "до"
   expected-result: |
-    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+    На странице интернет-магазина отображаются товары из каталога. Фильтр не включен.
 
 - summary: |
     Проверка фильтрации товаров по цене со скидкой
   requirement: |
-    При введении цены с учетом скидки в фильтр цены на странице отображается товар соответствующий цене товар
+    При введении значений цены с учетом скидки в фильтр на странице отображается товар соответствующий цене 
     prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 477.85$
@@ -224,7 +225,7 @@
 - summary: |
     Проверка фильтрация товаров по цене со скидкой
   requirement: |
-    При введении цены с учетом скидки в фильтр цены на странице отображается товар соответствующий цене товар
+    При введении цены с учетом скидки в фильтр на странице отображается товар соответствующий цене
     prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 477.85$
@@ -237,7 +238,7 @@
 - summary: |
     Проверка фильтрации товаров по цене без скидки
   requirement: |
-    При введении цены без учета скидки в фильтр цены на странице отображаются товары соответствующего диапазона
+    При введении в фильтр цены без учета скидки - на странице отображаются товары соответствующего диапазона
     prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 549$
@@ -250,7 +251,7 @@
 - summary: |
     Проверка фильтрация товаров по цене без скидки
   requirement: |
-    При введении в фильтр цены без учета скидки на странице отображается товар соответствующий цене товара
+    При введении в фильтр цены без учета скидки - на странице отображается товар соответствующий цене товара
   prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 549$ 
@@ -277,7 +278,7 @@
   requirement: |
     При отсутствии отметки в чекбоксе "В наличии" отображаются товары которых нет в наличии
   prerequisites: |
-    Чекбокс "В наличии" отмечен галочкой по умолчанию
+    Чекбокс "В наличии" отмечен галочкой
   test-data: |
   steps:
     - В разделе фильтрации убрать галочку из чекбокса "В наличии"
@@ -287,7 +288,7 @@
 - summary: |
     Проверка фильтрация товаров по производителю, цене и наличию
   requirement: |
-    При выборе в фильтре производителя, указании цены и наличия товара сайт должен отобразить реливантный результат фильтрации
+    При выборе в фильтре производителя, указании цены и наличия товара - сайт должен отобразить реливантный результат фильтрации
   prerequisites: |
   test-data: |
   steps:
@@ -313,7 +314,7 @@
 - summary: |
     Проверка просмотра товаров на странице каталога
   requirement: |
-    На сайте должен отображаться постраничный вывод товаров 
+    На сайте должен отображаться постраничный вывод товаров
   prerequisites: |  
     Открыт раздел "Магазин"
   test-data: |
@@ -325,7 +326,7 @@
   expected-result: |
     Сайт отображает постраничный вывод товаров 
     
-4.2???- summary: |
+- summary: |
     Проверка просмотра подробной информации товара на странице товара
   requirement: |
     На странице товара должна выводится подробная информация о товаре: название, рейтинг, цена со скидкой, цена без скидки
@@ -341,7 +342,7 @@
   expected-result: |
     На странице товара выводится подробная информация о товаре: название, рейтинг, цена со скидкой, цена без скидки
 
-4.3? - summary: |
+- summary: |
     Проверка просмотра подробной информации товара в каталоге
   requirement: |
     В каталоге товаров должна выводиться подробная информация о каждом товаре: название, рейтинг, цена со скидкой, цена без скидки
@@ -463,3 +464,35 @@
     - Проверить наличие сессии в Session storage
   expected-result: |
     Сохраняется корзина в сессии браузера
+
+- summary: |
+    Проверка перевода на сайте
+  requirement: |
+    При переключении сайта с английского языка на русский сайт должен отображатся на русском языке 
+  prerequisites: |
+  test-data: |
+    Выбран английский язык на сайта
+  steps:
+    - На странице магазина нажать "Language"
+    - Выбрать русский язык нажав "Russian"
+    - На странице магазина проверить перевод сайта на русский язык
+    - Выбрать товар "Iphone 9"
+    - На странице товара проверить наличие перевода описания о товаре на русский язык
+  expected-result: |
+    Сайт корректно производит перевод на русский язык
+
+- summary: |
+    Проверка перевода на сайте
+  requirement: |
+    При переключении сайта с русского языка на английский сайт должен отображатся на английском языке 
+  prerequisites: |
+  test-data: |
+    Выбран русский язык на сайта
+  steps:
+    - На странице магазина нажать "Язык"
+    - Выбрать русский язык нажав "English"
+    - На странице магазина проверить перевод сайта на английский язык
+    - Выбрать товар "Iphone 9"
+    - На странице товара проверить наличие перевода описания о товаре на английский язык
+  expected-result: |
+    Сайт корректно производит перевод на английский язык язык    
