--- a/test-cases.yml
+++ b/test-cases.yml
@@ -396,7 +396,7 @@
   requirement: |
     После удаления товара из корзины товары не отображаются в разделе "Корзина"
   prerequisites: |
-    Открыт раздел "Корзина" с добавленными товарами "Iphone" и "Iphone X"
+    Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
   steps:
     - Удалить товар "Iphone" из корзины нажав "Удалить"
@@ -408,7 +408,7 @@
   requirement: |
     После нажатия "Очистить корзину" в разделе "Корзина" все добавленые товары удаляются и не отображаются
   prerequisites: |
-    Открыт раздел "Корзина" с добавленными товарами "Iphone" и "Iphone X"
+    Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
   steps:
     - Очистить корзину нажав "Очистить корзину"
@@ -420,7 +420,7 @@
   requirement: |
     После нажатия "Продолжить покупки" в разделе "Корзина" сайт должен открыть страницу с каталогом товаров 
   prerequisites: |
-    Открыт раздел "Корзина" с добавленным товаром "Iphone"
+    Открыт раздел "Корзина" с добавленным товаром "Iphone 9"
   test-data: |
   steps:
     - Перейти в каталог нажав "Продолжить покупки"
@@ -432,12 +432,29 @@
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" совершается переход на страницу оплаты
   prerequisites: |
-    Открыт раздел "Корзина" с добавленными товаром "Iphone"
+    Открыт раздел "Корзина" с добавленными товаром "Iphone 9"
   test-data: |
   steps:
     - Оформить заказ нажав "Оформить заказ"
   expected-result: |
     На сайте открывается страница оплаты 
+
+- summary: |
+    Проверка изменения информации о количестве единиц товара после оформления заказа
+  requirement: |
+    После нажатия "Оформить заказ" в разделе "Корзина" значение количества единиц купленного товара уменьшается в каталоге 
+  prerequisites: |
+    Открыт раздел "Корзина" с одним добавленным товаром "Iphone 9" 
+    Доступное количество единиц товара на сайте - 94 шт
+  test-data: |
+  steps:
+    - Оформить заказ нажав "Оформить заказ"
+    - Нажать "Закрыть" в модальном окне об успешном оформлении заказа 
+    - Открыть каталог нажав "Магазин"
+    - Выбрать товар "Iphone 9"
+    - На странице магазина проверить количество единиц товара
+  expected-result: |
+    Количество единиц товара на сайте корректно уменьшается после оформления заказа
 
 - summary: |
     Проверка отправки запроса на сервер с ответом при оформлении заказа
