--- a/test-cases.yml
+++ b/test-cases.yml
@@ -485,7 +485,7 @@
 - summary: |
     Проверка перевода на сайте
   requirement: |
-    При переключении сайта с английского языка на русский сайт должен отображатся на русском языке 
+    При переключении сайта с английского языка на русский сайт должен отображаться на русском языке 
   prerequisites: |
   test-data: |
     Выбран английский язык на сайта
@@ -501,7 +501,7 @@
 - summary: |
     Проверка перевода на сайте
   requirement: |
-    При переключении сайта с русского языка на английский сайт должен отображатся на английском языке 
+    При переключении сайта с русского языка на английский сайт должен отображаться на английском языке 
   prerequisites: |
   test-data: |
     Выбран русский язык на сайта
