--- a/test-cases.yml
+++ b/test-cases.yml
@@ -494,7 +494,7 @@
     - Выбрать русский язык нажав "Russian"
     - На странице магазина проверить перевод сайта на русский язык
     - Выбрать товар "Iphone 9"
-    - На странице товара проверить наличие перевода описания о товаре на русский язык
+    - На странице товара проверить наличие перевода описания товаре на русский язык
   expected-result: |
     Сайт корректно производит перевод на русский язык
 
@@ -507,9 +507,9 @@
     Выбран русский язык на сайта
   steps:
     - На странице магазина нажать "Язык"
-    - Выбрать русский язык нажав "English"
+    - Выбрать английский язык нажав "English"
     - На странице магазина проверить перевод сайта на английский язык
     - Выбрать товар "Iphone 9"
-    - На странице товара проверить наличие перевода описания о товаре на английский язык
+    - На странице товара проверить наличие перевода описания товаре на английский язык
   expected-result: |
     Сайт корректно производит перевод на английский язык язык    
