--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка поиска товара по корректному ключевому слову 
+    Проверка поиска товара по корректному ключевому слову "Iphone"
   requirement: |
     Поле поиска выполняет успешный поиск товаров после ввода корректного ключевого слова
   prerequisites: |
@@ -12,7 +12,7 @@
     На странице отображается реливантный результат поиска по ключевому слову
 
 - summary: |
-    Поиск товара по некорректному ключевому слову 
+    Поиск товара по некорректному ключевому слову "123"
   requirement: |
     При вводе некорректного ключевого слова в поле поиска на странице отображается сообщение "Ничего не найдено!" 
   prerequisites: |
@@ -24,8 +24,8 @@
     В результате поиска отображается сообщение "Ничего не найдено!"
    
 - summary: |
-    Проверка поиска товара по категории 
-  requirement: |
+    Проверка поиска товара по категории "smartphones"
+    requirement: |
     При выборе категории на странице отображаются товары по заданной категории
   prerequisites: |
   test-data: |
@@ -36,7 +36,7 @@
     Результат поиска отображает товары по заданной категории
 
 - summary: |
-    Проверка поиска товара по категории 
+    Проверка поиска товара по категории "laptops"
   requirement: |
     При выборе категории "laptops" на странице отображаются товары по заданной категории
   prerequisites: |
@@ -48,7 +48,7 @@
     Результат поиска отображает товары по заданной категории
 
 - summary: |
-    Проверка поиска товара по категории 
+    Проверка поиска товара по категории "fragrances"
   requirement: |
     При выборе категории "fragrances" на странице отображаются товары по заданной категории
   prerequisites: |
@@ -60,7 +60,7 @@
     Результат поиска отображает товары по заданной категории
 
 - summary: |
-    Проверка поиска товара по категории 
+    Проверка поиска товара по категории "skincare" 
   requirement: |
     При выборе категории "skincare" на странице отображаются товары по заданной категории
   prerequisites: |
@@ -72,7 +72,7 @@
     Результат поиска отображает товары по заданной категории
 
 - summary: |
-    Проверка поиска товара по категории 
+    Проверка поиска товара по категории "groceries"
   requirement: |
     При выборе категории "groceries" на странице отображаются товары по заданной категории
   prerequisites: |
@@ -84,11 +84,11 @@
     Результат поиска отображает товары по заданной категории
 
 - summary: |
-    Проверка поиска товара по категории 
+    Проверка поиска товара по категории "home-decoration"
   requirement: |
     При выборе категории "home-decoration" на странице отображаются товары по заданной категории
   prerequisites: |
-  test-data: |
+  test-data: | 
   steps:
     - На странице магазина открыть вкладку "Категория"
     - Выбрать значение "home-decoration"   
@@ -132,7 +132,7 @@
     На странице отображаются все товары выбранные в фильтре производителя
 
 - summary: |
-    Проверка фильтрация товаров по цене
+    Проверка фильтрации товаров по отрицательной цене
   requirement: |
     При вводе в фильтр отрицательного значения цены страница должна отобразить сообщение "Ничего не найдено!"
   prerequisites: |
@@ -145,7 +145,7 @@
     На странице отображается сообщение "Ничего не найдено!"
 
 - summary: |
-    Проверка фильтрации товаров по цене 
+    Проверка фильтрации товаров по нулевой цене 
   requirement: |
     При вводе в фильтр нулевого значения цены страница должна отобразить сообщение "Ничего не найдено!"
   prerequisites: |
@@ -158,7 +158,7 @@
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
 - summary: |
-    Проверка фильтрации товаров по цене
+    Проверка фильтрации товаров по релевантной цене
   requirement: |
     При вводе в фильтр цен в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
@@ -171,7 +171,7 @@
     На странице интернет-магазина отображается товары с учетом фильтра
 
 - summary: |
-    Проверка фильтрации товаров по цене 
+    Проверка фильтрации товаров по граничным значениям цены 
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
   prerequisites: |
@@ -184,7 +184,7 @@
     На странице интернет-магазина отображается товары с учетом фильтра
 
 - summary: |
-    Проверка фильтрации товаров по цене
+    Проверка фильтрации товаров по цене превышающей допустимое значение
   requirement: |
     При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
   prerequisites: |
@@ -197,7 +197,7 @@
     На странице интернет-магазина отображается сообщение "Ничего не найдено!"
 
 - summary: |
-    Проверка фильтрации товаров по цене
+    Проверка фильтрации товаров по пустым значениям цены 
   requirement: |
     При пустых значениях фильтра цены отображаются все товары каталога
   prerequisites: |
@@ -207,20 +207,7 @@
     - В разделе "Цена" удалить значение "от"
     - В разделе "Цена" удалить значение "до"
   expected-result: |
-    На странице интернет-магазина отображаются товары из каталога. Фильтр не включен.
-
-- summary: |
-    Проверка фильтрации товаров по цене со скидкой
-  requirement: |
-    При введении значений цены с учетом скидки в фильтр на странице отображается товар соответствующий цене 
-    prerequisites: |
-  test-data: |
-    Значение цены конкретного товара для ввода в фильтр 477.85$
-  steps:
-    - В разделе "Цена" в значении "от" указать "0"
-    - В разделе "Цена" в значении "до" указать "477.85"
-  expected-result: |
-    На странице отображаются товары в соответсующем по цене диапазоне
+    На странице интернет-магазина отображаются товары из каталога. Фильтр не включен
 
 - summary: |
     Проверка фильтрация товаров по цене со скидкой
@@ -236,19 +223,6 @@
     На странице отображается товар соответствующий цене со скидкой
 
 - summary: |
-    Проверка фильтрации товаров по цене без скидки
-  requirement: |
-    При введении в фильтр цены без учета скидки - на странице отображаются товары соответствующего диапазона
-    prerequisites: |
-  test-data: |
-    Значение цены конкретного товара для ввода в фильтр 549$
-  steps:
-    - В разделе "Цена" в значении "от" указать "0"
-    - В разделе "Цена" в значении "до" указать "549"
-  expected-result: |
-    На странице отображаются товары в соответсующем по цене диапазоне
-
-- summary: |
     Проверка фильтрация товаров по цене без скидки
   requirement: |
     При введении в фильтр цены без учета скидки - на странице отображается товар соответствующий цене товара
@@ -259,10 +233,10 @@
     - В разделе "Цена" в значении "от" указать "549"
     - В разделе "Цена" в значении "до" указать "549"
   expected-result: |
-    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+    На странице интернет-магазина отображается релевантный товар
     
 - summary: |
-    Проверка фильтрация товаров по наличию
+    Проверка фильтрация товаров по отмеченому чекбоксу "В наличии"
   requirement: |
     При выборе чекбокса "В наличии" отображаются все товары в наличии 
   prerequisites: |
@@ -274,7 +248,7 @@
     На странице интернет-магазина отображаются товары в наличии 
 
 - summary: |
-    Проверка фильтрация товаров по наличию
+    Проверка фильтрация товаров по отсутствию отметки "В наличии"
   requirement: |
     При отсутствии отметки в чекбоксе "В наличии" отображаются товары которых нет в наличии
   prerequisites: |
@@ -483,7 +457,7 @@
     Сохраняется корзина в сессии браузера
 
 - summary: |
-    Проверка перевода на сайте
+    Проверка англо-русского перевода на сайте
   requirement: |
     При переключении сайта с английского языка на русский сайт должен отображаться на русском языке 
   prerequisites: |
@@ -499,7 +473,7 @@
     Сайт корректно производит перевод на русский язык
 
 - summary: |
-    Проверка перевода на сайте
+    Проверка русско-английского перевода на сайте
   requirement: |
     При переключении сайта с русского языка на английский сайт должен отображаться на английском языке 
   prerequisites: |
