--- a/test-cases.yml
+++ b/test-cases.yml
@@ -375,7 +375,7 @@
   steps:
     - Удалить товар "Iphone" из корзины нажав "Удалить"
   expected-result: |
-    Товар не отображается в разделе "Корзина".
+    Товар удален и не отображается в разделе "Корзина"
 
 - summary: |
     Проверка очистки корзины 
