--- a/test-cases.yml
+++ b/test-cases.yml
@@ -212,7 +212,7 @@
 - summary: |
     Проверка фильтрация товаров по цене со скидкой
   requirement: |
-    При введении цены с учетом скидки в фильтр на странице отображается товар соответствующий цене
+    При введении в фильтр цены с учетом скидки - на странице отображается товар соответствующий цене
     prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 477.85$
