--- a/bugreports.yml
+++ b/bugreports.yml
@@ -2,7 +2,9 @@
 - summary: |
     При введении в фильтр цены с учетом скидки - на странице отображается сообщение "Ничего не найдено!"
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - В разделе "Цена" в значении "от" указать "477.85"
     - В разделе "Цена" в значении "до" указать "477.85"
@@ -14,7 +16,9 @@
 - summary: |
     При введении в фильтр цены без учета скидки - на странице отображается сообщение "Ничего не найдено!"
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - В разделе "Цена" в значении "от" указать "549"
     - В разделе "Цена" в значении "до" указать "549"
@@ -26,7 +30,9 @@
 - summary: |
     В каталоге товаров не выводится рейтинг у товаров
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин" 
     - Проверить наличие рейтинга у товаров
@@ -38,7 +44,9 @@
 - summary: |
     При оформлении заказа не совершается переход на страницу оплаты
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин"
     - Добавить товар "Iphone 9" в корзину
@@ -51,7 +59,9 @@
 - summary: |
     Грамматическая ошибка в слове "оформлен" в модальном окне "Заказ успешно оформлен"
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин"
     - Добавить товар "Iphone 9" в корзину
@@ -65,7 +75,9 @@
 - summary: |
     Грамматическая ошибка в слове "оформлен" в модальном окне "Заказ успешно оформлен"
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин"
     - Добавить товар "Iphone 9" в корзину
@@ -79,7 +91,9 @@
 - summary: |
     Не работает кнопка крестик "Закрыть" в модальном окне "Заказ успешно оформлен"
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин"
     - Добавить товар "Iphone 9" в корзину
@@ -93,7 +107,9 @@
 - summary: |
     После оформления заказа не меняется значение количества единиц товара в наличии 
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин"
     - Добавить товар "Iphone 9" в корзину
@@ -110,7 +126,9 @@
 - summary: |
     При оформлении заказа не отправляется запрос на сервер. Ответ сервера - 500 
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - Открыть раздел "Магазин"
     - Добавить товар "Iphone 9" в корзину
@@ -124,7 +142,9 @@
 - summary: |
     Сайт не производит перевод подробного описания товара на русский язык 
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
   steps-to-reproduce: |
     - На странице магазина нажать "Language"
     - Выбрать русский язык нажав "Russian"
