--- a/requirements.yml
+++ b/requirements.yml
@@ -22,5 +22,6 @@ implicit:
   - Пользователь должен иметь возможность выбрать способ доставки заказа
   - После оформления заказа пользователь должен получить письмо на электронную почту с информацией о своем заказе
   - На странице корзины пользователь может указать количество единиц добавленного в корзину товара
+  - В разделе производителей должны указываться производители из всего каталога 
   - Сайт должен иметь возможность изменения валюты
   - На странице магазина должно быть указано количество страниц в каталоге
