--- a/testing-report.yml
+++ b/testing-report.yml
@@ -4,6 +4,10 @@
   status: pass
 
 - summary: |
+    Проверка поиска товара по корректному ключевому слову на любой странице каталога
+  status: fail
+  
+- summary: |
     Поиск товара по некорректному ключевому слову "123"
   status: pass
 
