--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,5 +1,20 @@
 ---
 - summary: |
+    Ошибка поиска товара по ключевому слову на любых страницах каталога
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть раздел "Магазин"
+    - Перейти на следующую страницу каталога нажав "Следующая"
+    - В поле поиска ввести ключевое слово "Iphone"
+  expected-result: |
+    На странице отображается реливантный результат поиска по ключевому слову
+  actual-result: |
+    На странице отображается сообщение "Ничего не найдено!"
+
+- summary: |
     При введении в фильтр цены с учетом скидки - на странице отображается сообщение "Ничего не найдено!"
   environment: |
     Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
