--- a/test-cases.yml
+++ b/test-cases.yml
@@ -12,6 +12,19 @@
     На странице отображается реливантный результат поиска по ключевому слову
 
 - summary: |
+    Проверка поиска товара по корректному ключевому слову на любой странице каталога
+  requirement: |
+    Поле поиска выполняет успешный поиск товаров на любой странице каталога после ввода корректного ключевого слова
+  prerequisites: |
+  test-data: | 
+  steps:
+    - Открыть раздел "Магазин"
+    - Перейти на следующую страницу каталога нажав "Следующая"
+    - В поле поиска ввести ключевое слово "Iphone"
+  expected-result: |
+    На странице отображается реливантный результат поиска по ключевому слову
+    
+- summary: |
     Поиск товара по некорректному ключевому слову "123"
   requirement: |
     При вводе некорректного ключевого слова в поле поиска на странице отображается сообщение "Ничего не найдено!" 
@@ -130,6 +143,30 @@
     - В разделе "Производитель" выбрать чекбокс "Saaf & Khaas"
   expected-result: |
     На странице отображаются все товары выбранные в фильтре производителя
+
+- summary: |
+    Проверка фильтрации товаров по корректной категории и корректному производителю
+  requirement: |
+    При выборе корректной категории и корректного чекбокса производителя на странице отображаются все товары по данным значениям 
+  prerequisites: |
+  test-data: |
+  steps:
+    - В разделе "Категория" выбрать "Smartphones"
+    - В разделе "Производитель" выбрать чекбокс "Apple"
+  expected-result: |
+    На странице отображаются все товары по данным значениям
+
+- summary: |
+    Проверка фильтрации товаров по некорректной категории и корректному производителю
+  requirement: |
+    При выборе некорректной категории и корректного чекбокса производителя на странице отображается сообщение "Ничего не найдено!"
+  prerequisites: |
+  test-data: |
+  steps:
+    - В разделе "Категория" выбрать "fragrances"
+    - В разделе "Производитель" выбрать чекбокс "Apple"
+  expected-result: |
+    На странице отображается сообщение "Ничего не найдено!"
 
 - summary: |
     Проверка фильтрации товаров по отрицательной цене
